--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -17,7 +17,7 @@
   --color-secondary: #C0DBFF;
   --color-text: #333333;
   --color-light-text: #777777;
-  --color-primary: #0a66ff;
+  --color-primary: #2F56C8;
 }
 .bg-primary {
   background-color: var(--color-primary);
@@ -53,7 +53,9 @@ html, body, #__next {
   font-family: 'Sass', sans-serif;
   scroll-behavior: smooth;
 }
-
+.font-tila {
+  font-family: 'Sass', sans-serif;
+}
 /* skip link */
 .skip-link {
   position: absolute;
